fix: remove overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,11 +13,12 @@ ill-app-tool-configuration {
 
 ill-app-system-bar {
     display: flex;
+    flex: 0;
 }
 
 .canvas-container {
     display: flex;
-    height: 100%;
+    flex: 1;
 }
 
 .eraser {
